--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
   "license": "ISC",
   "description": "ListHub - Frontend application for flexible list management",
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "next": "^16.0.10",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
