--- a/.gitignore
+++ b/.gitignore
@@ -19,11 +19,6 @@
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
 
-/data/
-
-# Frontend
-/frontend/node_modules/
-/frontend/.next/
-/frontend/out/
-/frontend/.env.local
-/frontend/.env*.local
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
