--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "doctrine/doctrine-bundle": "^2.14",
         "doctrine/doctrine-migrations-bundle": "^3.7",
         "doctrine/orm": "^3.5",
-        "nelmio/cors-bundle": "^2.6",
+        "lexik/jwt-authentication-bundle": "^3.2",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^1.23",
         "symfony/asset": "6.4.*",
